<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_seccion_main"
            android:icon="@drawable/ic_mode_edit_white_48dp"
            android:title="@string/Main"/>
        <item
            android:id="@+id/menu_seccion_search"
            android:icon="@drawable/ic_mode_edit_white_48dp"
            android:title="@string/Search"/>
        <item
            android:id="@+id/menu_seccion_new_event"
            android:icon="@drawable/ic_mode_edit_white_48dp"
            android:title="@string/New_Event"/>
    </group>
        <item android:title="Sub items">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_seccion_profile"
                        android:icon="@drawable/ic_mode_edit_white_48dp"
                        android:title="@string/Profile"/>
                    <item
                        android:id="@+id/menu_seccion_log_out"
                        android:icon="@drawable/ic_mode_edit_white_48dp"
                        android:title="@string/LogOut"/>
                </group>
            </menu>
        </item>
</menu>